--- a/components/insert-anchor-row.html
+++ b/components/insert-anchor-row.html
@@ -86,7 +86,7 @@
 
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                 <label>{{lang.neighbors}}</label>
-                <md-select ng-model="selectedNeighbors"
+                <md-select ng-model="insertAnchor.selectedNeighbors"
                            md-on-close="clearSearch()"
                            multiple>
                     <md-select-header class="multiple-selection-list-header">
@@ -106,7 +106,7 @@
 
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                 <label>{{lang.permitted}}</label>
-                <md-select ng-model="selectedPermitteds"
+                <md-select ng-model="insertAnchor.selectedPermitteds"
                            md-on-close="clearSearch()"
                            multiple>
                     <md-select-header class="multiple-selection-list-header">
