--- a/components/versions.html
+++ b/components/versions.html
@@ -93,6 +93,17 @@
                     </td>
                     <td md-cell>25/04/2019</td>
                 </tr>
+                <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
+                    <td md-cell class="color-orange">1.4.0</td>
+                    <td md-cell>
+                        UPDATES: Inserimeto della possibilita' di riposizionare ancore multiple<br>
+                        UPDATES: Inserimento del nome delle ancore al posto del id<br>
+                        UPDATES: Inserimento della possibilita' di anullare una sessione di disegno<br>
+                        UPDATES: Inserimento della select nella finestra evacuation al posto dei chips<br>
+                        BUG FIX: Risolto il problema della switch del fullscreen
+                    </td>
+                    <td md-cell>3/05/2019</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
