--- a/components/home.html
+++ b/components/home.html
@@ -54,7 +54,7 @@
                             <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                         </div>
 
-                        <div layout="column">
+                        <div layout="column" id="menu-container">
                             <md-list>
                                 <md-list-item ng-show="homeCtrl.isAdmin" ng-click="openLocations()"><p>{{lang.sitesTable}}
                                 </p><img src="img/icons/menu/add-location.png"
