--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -60,7 +60,7 @@
                             <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                         </div>
 
-                        <div ng-controller="menuController" layout="column" id="menu-container">
+                        <div layout="column" id="menu-container">
                             <md-list >
                                 <md-list-item ng-click="registry()"><p>{{lang.weTagTable}}</p><img
                                         src="img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
