--- a/components/canvas.html
+++ b/components/canvas.html
@@ -66,7 +66,7 @@
                 </md-fab-actions>
             </md-fab-speed-dial>
             <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">{{lang.save}}</md-button>
-            <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">SALVA</md-button>
+            <md-button ng-click="canvasCtrl.cancelDrawing()" class="md-warn md-raised float-right">{{lang.cancel}}</md-button>
         </div>
         <!--end draw buttoon-->
 
