--- a/components/home.html
+++ b/components/home.html
@@ -55,7 +55,7 @@
                             <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                         </div>
 
-                        <div layout="column">
+                        <div layout="column" id="menu-container">
                             <md-list>
                                 <md-list-item ng-show="homeCtrl.isAdmin || homeCtrl.isUserManager" ng-click="openLocations()"><p>Gestione siti
                                 </p><img src="img/icons/menu/add-location.png"
@@ -71,6 +71,9 @@
                                         alt=""></md-list-item>
                                 <md-list-item ng-click="viewHistory()"><p>Storico</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
+                                        alt=""></md-list-item>
+                                <md-list-item ng-click="quickActions()"><p>Comandi rapidi</p><img
+                                        src="img/icons/menu/quick_action_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
                                 <md-list-item ng-click="changePassword()"><p>Cambia password</p><img
                                         src="img/icons/menu/password_icon_16.png" class="menu-list-icon"
