--- a/css/custom.css
+++ b/css/custom.css
@@ -181,6 +181,10 @@ MARGINS
     margin-top: 15px;
 }
 
+.margin-top-20-px{
+    margin-top: 20px!important;
+}
+
 .margin-top--20-px{
     margin-top: -20px!important;
 }
