--- a/components/insert-zones-row.html
+++ b/components/insert-zones-row.html
@@ -67,6 +67,12 @@
                 </div>
             </md-input-container>
 
+            <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
+                <p class="margin-top-0 text-center color-lightgray">Seleziona colore</p>
+                <input type="color" value="#ff0000" ng-model="insertZone.color"
+                       colorpick-eyedropper-active="true" class="height-40px">
+            </md-input-container>
+
             <div class="background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
                  ng-show="insertZone.showSuccess">
                 {{insertZone.message}}
